fixed hero banner content and spacing issues for all resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,7 +256,6 @@ h6 {
   background: #25282D;
   background-size: cover;
   padding-top: 75px;
-  padding-bottom: 10px;
 }
 
 #intro .intro-info {
@@ -889,9 +888,9 @@ h6 {
   border: 4px solid #2BD3EF;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
+  margin: 40px auto;
   border-radius: 50%;
-  margin-bottom: 90px;
+  margin-bottom: 110px;
 }
 
 .githubstar-box .github-icon {
@@ -1184,7 +1183,7 @@ input#myInput:focus {
 
 #intro .intro-info {
   position: absolute!important;
-  top: 35px;
+  top: 75px;
 }
 
 
@@ -1194,13 +1193,13 @@ input#myInput:focus {
 # Responsive Media Queries
 --------------------------------------------------------------*/
 
-@media screen and (max-width: 1330px) and (min-width: 1089px) 
+@media screen and (max-width: 1330px) and (min-width: 1106px) 
 {
   ul.slides {
     height: 520px;
   }
   #intro .intro-info {
-   top: 35px;
+   top: 75px;
   }
   /* .circle_blue {
     margin-bottom: 150px;
@@ -1213,15 +1212,15 @@ input#myInput:focus {
   }
 }
 
-@media screen and (max-width: 1090px) and (min-width: 992px)  {
+@media screen and (max-width: 1105px) and (min-width: 992px)  {
   ul.slides {
     height: 580px;
   }
   #intro .intro-info {
-   top: 10px;
+   top: 50px;
   }
   .circle_blue {
-    margin-bottom: 80px;
+    margin-bottom: 110px;
   }
   .tag-line {
     margin-top: 75px;
@@ -1279,16 +1278,16 @@ input#myInput:focus {
     border: 4px solid #2BD3EF;
     display: flex;
     justify-content: center;
-    margin: 0 auto;
+    margin: 40px auto;
     border-radius: 50%;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
   }
   #intro .intro-info h2 {
     font-size: 42px;
     line-height: 38px;
   }
   .tag-line {
-    margin-top: 60px;
+    margin-top: 50px;
   }
   #intro .intro-info h4 {
     font-family: 'OpenSans-Regular';
@@ -1458,9 +1457,12 @@ input#myInput:focus {
     position: relative;
     top: 398px;
   }
+  .circle_blue {
+    margin-bottom: 75px;
+  }
 }
 
-@media (max-width: 638px) {
+@media (max-width: 662px) {
   #footer .footer-top .social-links a {
     margin-bottom: 25px;
   }
@@ -1495,7 +1497,7 @@ input#myInput:focus {
     justify-content: center;
     margin: 0 auto;
     border-radius: 50%;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
   }
   #intro {
     padding-bottom: 0px;
